Add initial HTML structure for love proposal site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Raghav ❤️ Jahnvi</title>
+
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+<!-- LOADER -->
+<div id="loader">
+  <h1>Loading Our Love ❤️</h1>
+</div>
+
+
+<!-- MAIN WEBSITE -->
+<div id="main">
+
+
+<header>
+  Raghav ❤️ Jahnvi
+</header>
+
+
+<!-- HOME -->
+<section id="home">
+  <h1>My Forever Love 💖</h1>
+  <p>You are my today and all my tomorrows ✨</p>
+</section>
+
+
+<!-- PROPOSAL -->
+<section id="proposal">
+
+  <h2>Will You Be Mine Forever? 💍</h2>
+
+  <div class="btns">
+    <button onclick="yesClick()">YES ❤️</button>
+    <button onclick="alwaysClick()">ALWAYS 💖</button>
+  </div>
+
+</section>
+
+
+<!-- POPUP -->
+<div id="popup"></div>
+
+
+<!-- RING + CONFETTI BOX -->
+<div id="ringBox"></div>
+
+
+</div>
+
+
+<script src="script.js"></script>
+
+</body>
+</html>
 
