Revise journey, letters, and quotes sections
Updated romantic content in the journey section and added love letters and quotes.

--- a/index.html
+++ b/index.html
@@ -37,33 +37,186 @@
   <h2>Our Journey 🛤️</h2>
 
   <h3>How It Started 💫</h3>
-  <p>23 Dec 2022 – Love at first sight ❤️</p>
+  <p>It was 23rd December 2022. 
+    St conrad's inter college backfield when I saw this beautiful girl wearing red and blue check shirt with black jeans and brown overcoat 💃🐬✨ 
+    dancing like a dolphin unbothered about the crowd 😍🙈 about someone who's constantly staring at her 👀❤️ who has lost all his senses 🤯💘 
+    and is just gazing at her moves ✨💫 her hairs waving like clouds ☁️💖 although jooda bana rkha tha woh high clip wala! 😁🌸💞 
+    Sweat running all over the body 💦🔥 was looking just perfect 😍👌💯. Ussi time maine soch liya tha ki Raghavvv abb toh bss yeh hi chaiye yeh nhi toh koi nhi!! 💖💍🥰 
+    I still remember that phoolon waala handkerchief 🌼🧣 jiss se madam ji apna paseena wipe kr rhi thi!! 😍💗🤭 Ahhhaa ahaa kya nazara tha ✨🌈 
+    koi soch skte hai ki paseena pochte dekh bhi pyaar ho skta hai 💦❤️🥹 haaa bhai ho skta hai mujhe hua hai wo bhi sirf aapse jahnvi ji!! 💘💞😘❤️
+    Movies mei dikhate hai ki jab aapko love of your life milta hai 🎬💑✨ toh hawayein thandi hojati hai 🍃❄️ aaspaas sab gayab hojata hai 🌍🌫️ 
+    aur sirf vhi insaan dikhta hai 👩‍❤️‍👨💖 aap kho jaate ho 😵‍💫💕 mere saath bhi yeh sb hua 😍💝 mujhe sirf jahnvi dikh rhi thi 💫❤️ sirf aap aur koi nhi 💕🙈 
+    aur aapko bhi koi nhi dikh rha tha 🥹💘. Dil le gayi aap meraaa ❤️❤️💓💞💖✨</p>
 
   <h3>How It Went 🌈</h3>
-  <p>From coaching to Domino’s… always together 😘</p>
+  <p>I am sure it was God's plan to make us meet and be partners of life 🙏💖✨ 
+    coz isko dekhne ke baad meri life mei kuch aisi tragedy hui 😔💔 ki shifted my house 🏠📦
+    wo bhi ek aise area mei jaha mei kbhi aaya hi nhi tha 🌍🤍 mei waha shift hua coz mumma ki job tha 👩‍💼💼💙
+    hamare shift hone ke baad unki job bhi chli gayi thi 😞💔 but mujhe jahnvi mil gyi thi 💘🥹❤️ 
+    iske peeche peeche maine mayur Sharma bhi join Krli 📚✍️✨
+    mujhe kya pta tha ki mere liye wo coaching jaana pdhai krne se zyada pyaar krne mei fruitful hoga!! 😍📖➡️💞🥰 
+    Fir toh school mei bhi saath 🏫💑 coaching mei bhi saath 📚❤️ madam ji ke saath paidal paidal 👣💘
+    unke ghr tk jaata tha 🏠🥹💞 pr meri bholi masoom jahnvi 🥺🌸💖 jo yeh smjh hi nhi payi 😅💭
+    ki ek ldka paidal paidal apne ghr se dur 😵‍💫👣 sirf mere ko chhodne aarha hai ❤️🙈 aur waapis ghr Jaa rha hai 🚶‍♂️🏠💔 
+    toh wo mujhse pyaar kr rha hai!! 😍💘💯 Aapke saath urban Mart pr baithne se leke 🛒💑✨
+    Dominos pr hamari 1st year anniversary celebrate krne tk 🍕🎉❤️ it was a complete tragic yet beautiful roller coaster ride 🎢💞🥹 
+    jisme bahaut saare kalesh hue 😤💥 bahaut saare aasu bahaein 😭💧 dono ne 💔❤️ bahaut ladayi hui 😠⚡ bahaut saara ek doosre ko pyaar diya!! 💖🤗💑✨</p>
 
   <h3>How It’s Going 🫶</h3>
-  <p>Long distance but forever close 💍</p>
+  <p>Ik abhi long distance chl rha hai 😔📱💔 
+    but I am sure ki very soon this long distance will end 🙏💞✨ 
+    and we'll again be together under a single roof! 🏠❤️🥹
+    Sleeping with each other in a single blanket 🛌🫂💘
+    decorating our home the way we want 🏡🎨✨
+    coming tired with a hectic office day 😩💼💤
+    and being eachother's peace!! 😌💖🫶🏻 Cooking for each other 👩‍🍳👨‍🍳❤️
+    taking showers together 🚿💞🙈 watching our favourite tv show FRIENDS 📺💙😂 on weekends 🛋️🍿✨ 
+    random going to random shopping spree 🛍️😄💫 buying groceries for our home 🛒🏠💖 
+    and lot more things coming up together 💑🌈✨. Jahnvi I see the future with you 🔮❤️🥹
+    a complete happily married life ever after 💍👫💞✨ pls be always mine pls 🥺💖🫶🏻✨ 💍</p>
 </section>
 
 <!-- Letters -->
 <section id="letters" class="page">
   <h2>Love Letters 💌</h2>
 
-  <div class="card">My Jaanu ❤️ You are my forever</div>
-  <div class="card">My Booboo 💕 Life is beautiful with you</div>
-  <div class="card">My Love 💖 Always yours</div>
+  <div class="card">My Jaanu ❤️🥺,
+
+Jab bhi mei apni life ke sabse khoobsurat pal sochta hu na… har jagah bas tu hi dikhti hai 💫💖
+Teri hasi, tera gussa, tera care karna, mera naam lene ka tareeka… sab kuch mere dil mei permanently save ho chuka hai 😘🔐
+
+Jaanu, tu sirf meri girlfriend nahi hai… tu meri strength hai, meri smile hai, meri prayer hai 🙏❤️
+Jab mei weak hota hu, tu mujhe strong banati hai 💪🥹
+Jab mei confuse hota hu, tu mera raasta ban jaati hai 🌈✨
+
+Tere saath bitaya har moment meri life ka treasure hai 💎💕Chahe woh late-night chats ho 📱💬
+Ya bina wajah hansna 😂💞
+Ya ek dusre ko miss karna 🥺💌
+Sab kuch mere dil mei likha hua hai ❤️✍️
+
+Aur sun meri Jaanu…
+Mei tujhe sirf aaj ke liye nahi, poori zindagi ke liye chahta hu 💍👫
+Mei tujhe apni wife ke roop mei dekhna chahta hu 😍👰
+Hamare cute se bachche 👶👧
+Family trips 🚗🏖️
+Sunday mornings 🌞☕
+Sab tere saath hi imagine karta hu 💕
+
+✨ Shayari For You ✨
+
+“Tu mile toh lagta hai zindagi mil gayi,
+Tu saath ho toh har khushi mil gayi…
+Tujhse hi shuru, tujh pe hi khatam hoon mei,
+Meri har kahani tujhmein hi likh gayi…” ❤️🥰
+
+Jaanu, mei tujhe promise karta hu 🤞💖
+Hamesha respect karunga 🙏
+Hamesha protect karunga 🛡️
+Hamesha support karunga 🤝
+Chahe duniya idhar ki udhar ho jaaye 🌍💔
+Mei tera hi rahunga 💯❤️
+
+Love you beyond words 😘💞
+Forever yours,
+Suarrrrr🐷🐷❤️</div>
+  <div class="card">My BooBoo 🐻💞,
+
+Pata hai jab tu “baby”, “jaan”, “love” bolti hai na…
+Mera dil literally melt ho jaata hai 😭❤️🫠
+
+Tu itni cute hai na ki kabhi-kabhi mujhe lagta hai mei lucky nahi… mei blessed hoon 😘🙏💖
+Teri smile meri medicine hai 💊🥰
+Tera hug meri therapy 🤗💞
+Aur tera pyaar meri life ka sabse bada gift 🎁❤️
+
+BooBoo, mei jab bhi sad hota hu na 😔
+Tu bina bole sab samajh jaati hai 🥺💗
+Aur phir apne pyaar se mujhe wapas happy bana deti hai 😊🌈
+Tu meri best friend bhi hai 👯‍♀️
+Meri girlfriend bhi 😍
+Meri future wife bhi 💍
+Aur meri life partner bhi 🤝❤️
+
+Mei tere saath buddha hona chahta hu 👴👵😂
+Tere saath ghar banana chahta hu 🏠💞
+Tere saath apni duniya basana chahta hu 🌍❤️
+
+Hamari life aisi hogi na 😍👇
+➡️ Subah good morning kiss 😘
+➡️ Shaam ko saath chai ☕💕
+➡️ Raat ko movies 🎬🍿
+➡️ Weekend pe date 🥰💐
+➡️ Aur hamesha ek dusre ka haath pakad ke chalna 🤝💖
+BooBoo, mei tujhe kabhi akela feel nahi hone dunga 🤍🤞
+Har dream mei tera saath dunga ✨
+Har struggle mei tera haath pakadunga 💪❤️
+
+Tu meri princess hai 👑💗
+Aur mei tera lifetime partner 😘🔐
+
+Love you infinity ♾️💕
+Your forever,
+BKLLL❤️💖</div>
+  <div class="card">My Rasmalaiii ❤️🥰,
+
+Jab se Aap meri life mei aaye ho na…
+Tab se har din special ban gaya hai 💫💖
+
+Aap meri zindagi ka sabse pyaara chapter ho 📖💕
+Jisme sirf love hai ❤️
+Respect hai 🙏
+Care hai 🤗
+Trust hai 🤝
+Aur endless devotion hai 🥹💞
+
+Aap ke saath mei khud ka best version banta hu 😘✨
+Aap mujhe motivate karte ho 💪
+Mujhe samajhte ho 🥺
+Mujhe deserve se zyada pyaar dete ho 💗
+Mei chahta hu ki jab future mei koi puche…
+“Tumhari success ka reason kya hai?”
+Mei proudly bolu — Meri Aap ❤️ 😍🔥
+
+🌸 Poem For You 🌸
+
+**“Tum meri subah ki roshni ho ☀️
+Tum meri raat ka sukoon ho 🌙
+Tum meri har dua ka jawaab ho 🙏
+Tum meri zindagi ka junoon ho ❤️
+
+Tum saath ho toh sab aasaan lagta hai 💫
+Tum door ho toh sab suna lagta hai 😔
+Tum hi mera kal ho, tum hi mera aaj 💞
+Tum bin mera har sapna adhoora lagta hai…” 💕🥺**
+
+Aap, mei sapna dekhta hu ki hum dono ek din shaadi karenge 💍😍
+Apna pyara sa ghar hoga 🏡💖
+Apne naughty se bachche honge 👶😂
+Aur hum unko apni love story sunayenge 📖❤️
+
+Mei Aap se vaada karta hu 🤞💗
+Kabhi aapko hurt nahi karunga 😔❌
+Kabhi aapka saath nahi chhodunga 🚫💔
+Aur hamesha aapka proud partner rahunga 😘💪
+
+Aap meri duniya ho 🌍❤️
+Meri jaan ho 💞
+Mera sab kuch ho 🥹💖
+
+Forever yours,
+Raghavvvvvv💘</div>
 </section>
 
 <!-- Quotes -->
 <section id="quotes" class="page">
   <h2>Quotes 💬</h2>
 
-  <p>💋 One kiss all it takes</p>
-  <p>💫 Then you happened</p>
-  <p>🥹 You're my forever</p>
-  <p>😄 Shaadi = daal chawal</p>
-  <p>❤️ Pyaar ek hi baar</p>
+  <p>💋 One Kiss All It Takes To Fall In Love With Me 💋</p>
+  <p>💫 “I thought this was the best thing that ever happened to me… but then you happened.” 💫</p>
+  <p>🥹 “You’re the person I’m meant to spend the rest of my life with.” 🥹❤️</p>
+  <p>😄 “Shaadi is daal chawal for pachaas saal… till death do us part.” ❤️😄</p>
+  <p>❤️ “Hum ek baar jeete hain, ek baar marte hain… aur pyaar bhi ek hi baar hota hai.”
+(Aur wo ek baar mujhe aapse ho chuka hai smjhe aap)</p>
 </section>
 
 <!-- Gallery -->
